--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,15 @@
 @font-face {
-  font-family: "Pretendard-Regular";
-  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
-    format("woff");
+  font-family: "Pretendard";
+  font-weight: 400;
+  src: local("Pretendard Regular"),
+    url("../assets/fonts/Pretendard-Regular.woff") format("woff"),
+    url("../assets/fonts/Pretendard-Regular.woff2") format("woff2");
+}
+@font-face {
+  font-family: "Pretendard";
+  src: local("Pretendard ExtraBold"),
+    url("../assets/fonts/Pretendard-ExtraBold.woff") format("woff"),
+    url("../assets/fonts/Pretendard-ExtraBold2.woff2") format("woff2");
 }
 
 * {
