--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,14 +2,14 @@
   font-family: "Pretendard";
   font-weight: 400;
   src: local("Pretendard Regular"),
-    url("../assets/fonts/Pretendard-Regular.woff") format("woff"),
-    url("../assets/fonts/Pretendard-Regular.woff2") format("woff2");
+    url("/fonts/Pretendard-Regular.woff") format("woff"),
+    url("/fonts/Pretendard-Regular.woff2") format("woff2");
 }
 @font-face {
   font-family: "Pretendard";
   src: local("Pretendard ExtraBold"),
-    url("../assets/fonts/Pretendard-ExtraBold.woff") format("woff"),
-    url("../assets/fonts/Pretendard-ExtraBold.woff2") format("woff2");
+    url("/fonts/Pretendard-ExtraBold.woff") format("woff"),
+    url("/fonts/Pretendard-ExtraBold.woff2") format("woff2");
 }
 
 * {
